--- a/project/.project
+++ b/project/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>AOS-v0.1-beta</name>
-	<comment>金码坊系统开发平台</comment>
+	<comment>AOS应用基础平台</comment>
 	<projects>
 	</projects>
 	<buildSpec>
