--- a/project/src/resources/jdbc.properties
+++ b/project/src/resources/jdbc.properties
@@ -1,10 +1,16 @@
 #============= DataSource Configuration ===========#
 
-#==PostgreSQL Connection
-jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/aos
-jdbc.username=postgres
+#==MySQL Connection
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/aos?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
 jdbc.password=111111
+
+#==PostgreSQL Connection
+#jdbc.driver=org.postgresql.Driver
+#jdbc.url=jdbc:postgresql://localhost:5432/aos
+#jdbc.username=postgres
+#jdbc.password=111111
 
 #==Oracle Connection
 #jdbc.driver=oracle.jdbc.OracleDriver
@@ -12,8 +18,10 @@ jdbc.password=111111
 #jdbc.username=aos
 #jdbc.password=111111
 
-#==MySQL Connection
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/aos?useUnicode=true&characterEncoding=utf-8
-#jdbc.username=root
-#jdbc.password=111111
+#==MSSQL Connection
+
+#==DB2 Connection
+
+#==Sybase Connection
+
+#==H2 Connection
