--- a/project/.project
+++ b/project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AOS-v0.1-beta</name>
+	<name>AOS-v0.1</name>
 	<comment>AOS应用基础平台</comment>
 	<projects>
 	</projects>
