--- a/project/src/resources/jdbc.properties
+++ b/project/src/resources/jdbc.properties
@@ -9,8 +9,8 @@ jdbc.password=111111
 #==Oracle Connection
 #jdbc.driver=oracle.jdbc.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
-#jdbc.username=aos
-#jdbc.password=aos
+#jdbc.username=aos_test
+#jdbc.password=aos_test
 
 #==MS-SQLServer Connection
 #jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
