--- a/project/src/resources/jdbc.properties
+++ b/project/src/resources/jdbc.properties
@@ -1,16 +1,16 @@
 #============= DataSource Configuration ===========#
 
 #==MySQL Connection
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/aos?useUnicode=true&characterEncoding=utf-8
-#jdbc.username=root
-#jdbc.password=111111
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/aos?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=111111
 
 #==Oracle Connection
-jdbc.driver=oracle.jdbc.OracleDriver
-jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
-jdbc.username=aos
-jdbc.password=aos
+#jdbc.driver=oracle.jdbc.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
+#jdbc.username=aos
+#jdbc.password=aos
 
 #==MS-SQLServer Connection
 #jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
