--- a/01.PROJECT/.classpath
+++ b/01.PROJECT/.classpath
@@ -91,6 +91,7 @@
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jasperreport/jcommon-1.0.15.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jasperreport/jfreechart-1.0.12.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jasperreport/poi-3.10.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons/commons-digester-2.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/activiti/activiti-bpmn-converter-5.17.0.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/activiti/activiti-bpmn-layout-5.17.0.jar"/>
