--- a/01.PROJECT/webapp/WEB-INF/web.xml
+++ b/01.PROJECT/webapp/WEB-INF/web.xml
@@ -99,7 +99,7 @@
 		<url-pattern>/verCodeServlet.png</url-pattern>
 	</servlet-mapping>
 
-	<!-- H2控制台 -->
+	<!-- H2控制台 
 	<servlet>
 		<servlet-name>h2</servlet-name>
 		<servlet-class>org.h2.server.web.WebServlet</servlet-class>
@@ -109,24 +109,7 @@
 		<servlet-name>h2</servlet-name>
 		<url-pattern>/h2/*</url-pattern>
 	</servlet-mapping>
-
-	<!-- hproseServlet -->
-	<servlet>
-		<servlet-name>hproseServlet</servlet-name>
-		<servlet-class>hprose.server.HproseServlet</servlet-class>
-		<init-param>
-			<param-name>class</param-name>
-			<param-value>cn.osworks.aos.mylab.hprose.server.HPRoseService</param-value>
-		</init-param>
-		<init-param>
-			<param-name>crossDomain</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>hproseServlet</servlet-name>
-		<url-pattern>/hproseservice</url-pattern>
-	</servlet-mapping>
+	-->
 
 	<!-- 缺省首页 -->
 	<welcome-file-list>
