--- a/01.PROJECT/webapp/WEB-INF/web.xml
+++ b/01.PROJECT/webapp/WEB-INF/web.xml
@@ -99,7 +99,7 @@
 		<url-pattern>/verCodeServlet.png</url-pattern>
 	</servlet-mapping>
 
-	<!-- H2控制台 
+	<!-- H2控制台 -->
 	<servlet>
 		<servlet-name>h2</servlet-name>
 		<servlet-class>org.h2.server.web.WebServlet</servlet-class>
@@ -109,7 +109,6 @@
 		<servlet-name>h2</servlet-name>
 		<url-pattern>/h2/*</url-pattern>
 	</servlet-mapping>
-	-->
 
 	<!-- 缺省首页 -->
 	<welcome-file-list>
