--- a/01.PROJECT/.project
+++ b/01.PROJECT/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AOS-DEV</name>
+	<name>AOS</name>
 	<comment>AOS：JavaEE应用基础平台</comment>
 	<projects>
 	</projects>
