--- a/01.PROJECT/src/resources/log4j.properties
+++ b/01.PROJECT/src/resources/log4j.properties
@@ -19,5 +19,5 @@ log4j.appender.logfile.MaxBackupIndex=100
 log4j.appender.logfile.encoding=UTF-8
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [Class:%C->Thread:%t] %m %n
-log4j.appender.logfile.File=../aoslogs/aos.log
+log4j.appender.logfile.File=./logs/aos.log
 
