no commit message

--- a/01.PROJECT/webapp/WEB-INF/web.xml
+++ b/01.PROJECT/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@
 		</init-param>
 		<init-param>
 			<param-name>excludes</param-name>
-			<param-value>login.jhtml</param-value>
+			<param-value>login.jhtml,/esb/</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
