no commit message

--- a/01.PROJECT/src/resources/log4j.properties
+++ b/01.PROJECT/src/resources/log4j.properties
@@ -6,6 +6,8 @@ log4j.logger.org.springframework=INFO
 log4j.logger.org.apache.ibatis=INFO
 log4j.logger.org.mybatis=INFO
 log4j.logger.org.apache.commons.beanutils=ERROR
+log4j.logger.net.sf.ehcache=ERROR
+log4j.logger.org.jgroups=INFO
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -19,5 +21,5 @@ log4j.appender.logfile.MaxBackupIndex=100
 log4j.appender.logfile.encoding=UTF-8
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [Class:%C->Thread:%t] %m %n
-log4j.appender.logfile.File=./logs/aos.log
+log4j.appender.logfile.File=c:/aoslogs/aos.log
 
