--- a/01.PROJECT/.classpath
+++ b/01.PROJECT/.classpath
@@ -17,7 +17,6 @@
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/slf4j-log4j12-1.7.5.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/guava-17.0.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jdbc/ojdbc6.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/ehcache-core-2.5.1.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jsr305-1.3.9.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring/spring-aop-3.2.4.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring/spring-aspects-3.2.4.RELEASE.jar"/>
@@ -114,7 +113,10 @@
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/httpclient-4.5.2.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/httpcore-4.4.4.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/httpmime-4.5.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/ehcache-jgroupsreplication-1.7.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/ehcache-2.7.4.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jgroups-3.6.3.Final.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/activiti/activiti-cdi.jar"/>
 	<classpathentry kind="output" path="webapp/WEB-INF/classes"/>
 </classpath>
