no commit message

--- a/01.PROJECT/src/resources/log4j.properties
+++ b/01.PROJECT/src/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootCategory=TRACE,stdout,logfile
 
 log4j.logger.cn.osworks=INFO
 #cahnge to your project package path
-log4j.logger.com.myproject=INFO
+log4j.logger.com.mycorp.mysystem=INFO
 
 log4j.logger.org.eclipse.jetty=ERROR
 log4j.logger.org.springframework=ERROR
