no commit message

--- a/01.PROJECT/src/resources/log4j.properties
+++ b/01.PROJECT/src/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootCategory=TRACE,stdout,logfile
 
-log4j.logger.cn.osworks=INFO
+log4j.logger.cn.osworks=DEBUG
 #cahnge to your project package path
 log4j.logger.com.mycorp.mysystem=INFO
 
