--- a/01.PROJECT/src/resources/log4j.properties
+++ b/01.PROJECT/src/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootCategory=TRACE,stdout,logfile
 
 log4j.logger.cn.osworks=DEBUG
 #cahnge to your project package path
-log4j.logger.com.mycorp.mysystem=INFO
+#log4j.logger.com.mycorp.mysystem=INFO
 
 log4j.logger.org.eclipse.jetty=ERROR
 log4j.logger.org.springframework=ERROR
@@ -12,7 +12,7 @@ log4j.logger.org.mybatis=ERROR
 log4j.logger.org.apache.commons.beanutils=ERROR
 log4j.logger.net.sf.ehcache=ERROR
 log4j.logger.org.jgroups=ERROR
-log4j.logger.com.mchange=ERROR
+log4j.logger.com.mchange=DEBUG
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
