no commit message

--- a/01.PROJECT/src/resources/log4j.properties
+++ b/01.PROJECT/src/resources/log4j.properties
@@ -12,7 +12,10 @@ log4j.logger.org.mybatis=ERROR
 log4j.logger.org.apache.commons.beanutils=ERROR
 log4j.logger.net.sf.ehcache=ERROR
 log4j.logger.org.jgroups=ERROR
+
 log4j.logger.com.mchange=DEBUG
+log4j.logger.com.mchange.v2.c3p0.impl.C3P0PooledConnectionPool=ERROR
+
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
