--- a/01.PROJECT/src/resources/jdbc.properties
+++ b/01.PROJECT/src/resources/jdbc.properties
@@ -4,7 +4,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/aos?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
 jdbc.username=root
-jdbc.password=111111
+jdbc.password=root
 jdbc.vsql=SELECT 1
 
 #==Oracle Connection
