no commit message

--- a/01.PROJECT/src/resources/jdbc.properties
+++ b/01.PROJECT/src/resources/jdbc.properties
@@ -1,18 +1,18 @@
 #============= DataSource Configuration ===========#
 
 #==MySQL Connection
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/aos?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
-#jdbc.username=root
-#jdbc.password=root
-#jdbc.vsql=SELECT 1
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/aos?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
+jdbc.username=root
+jdbc.password=root
+jdbc.vsql=SELECT 1
 
 #==Oracle Connection
-jdbc.driver=oracle.jdbc.OracleDriver
-jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
-jdbc.username=aos
-jdbc.password=aos
-jdbc.vsql=SELECT 1 FROM DUAL
+#jdbc.driver=oracle.jdbc.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
+#jdbc.username=aos
+#jdbc.password=aos
+#jdbc.vsql=SELECT 1 FROM DUAL
 
 #==MS-SQLServer Connection
 #jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
