--- a/AOS-ADMIN/01.PROJECT/src/resources/log4j.properties
+++ b/AOS-ADMIN/01.PROJECT/src/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=TRACE,stdout,logfile
+log4j.rootCategory=DEBUG,stdout,logfile
 
 log4j.logger.cn.osworks=DEBUG
 #cahnge to your project package path
