--- a/AOS-ADMIN/01.PROJECT/.project
+++ b/AOS-ADMIN/01.PROJECT/.project
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>AOS-ADMIN</name>
 	<comment>AOS管理系统开发平台</comment>
