--- a/AOS-ADMIN/01.PROJECT/src/resources/jdbc.properties
+++ b/AOS-ADMIN/01.PROJECT/src/resources/jdbc.properties
@@ -2,7 +2,7 @@
 
 #==MySQL Connection
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/aos2?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
+jdbc.url=jdbc:mysql://localhost:3306/aos?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
 jdbc.username=root
 jdbc.password=root
 jdbc.vsql=SELECT 1
@@ -14,21 +14,10 @@ jdbc.vsql=SELECT 1
 #jdbc.password=aos
 #jdbc.vsql=SELECT 1 FROM DUAL
 
-#==MS-SQLServer Connection
-#jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#jdbc.url=jdbc:sqlserver://localhost:1433;database=aos
-#jdbc.username=sa
-#jdbc.password=111111
-#jdbc.vsql=SELECT 1
-
 #==PostgreSQL Connection
 #jdbc.driver=org.postgresql.Driver
 #jdbc.url=jdbc:postgresql://localhost:5432/aos
 #jdbc.username=postgres
 #jdbc.password=111111
 #jdbc.vsql=SELECT 1
-
-#==DB2 Connection
-
-#==Sybase Connection
 
