--- a/AOS-ADMIN/01.PROJECT/webapp/WEB-INF/web.xml
+++ b/AOS-ADMIN/01.PROJECT/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
 		<url-pattern>*</url-pattern>
 	</filter-mapping>
 
-	<!-- Http过滤器 
+	<!-- Http过滤器 -->
 	<filter>
 		<filter-name>httpFilter</filter-name>
 		<filter-class>aos.framework.web.filter.HttpFilter</filter-class>
@@ -40,7 +40,6 @@
 		<filter-name>httpFilter</filter-name>
 		<url-pattern>*.jhtml</url-pattern>
 	</filter-mapping>
-	-->
 	
 	<!-- Http过滤器 -->
 	<filter>
