no commit message

--- a/AOS-ADMIN/01.PROJECT/src/framework/java/aos/framework/core/velocity/velocity.aos.properties
+++ b/AOS-ADMIN/01.PROJECT/src/framework/java/aos/framework/core/velocity/velocity.aos.properties
@@ -1,6 +1,6 @@
 #default
 class.resource.loader.class=org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
-class.resource.loader.cache=true
+class.resource.loader.cache=false
 input.encoding=utf-8
 output.encoding=utf-8
 resource.loader=class
