--- a/AOS-ADMIN/01.PROJECT/src/resources/jdbc.properties
+++ b/AOS-ADMIN/01.PROJECT/src/resources/jdbc.properties
@@ -2,7 +2,7 @@
 
 #==MySQL Connection
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/aos?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
+jdbc.url=jdbc:mysql://127.0.0.1:3306/aos?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
 jdbc.username=root
 jdbc.password=root
 jdbc.vsql=SELECT 1
