no commit message

--- a/AOS-ADMIN/01.PROJECT/webapp/WEB-INF/web.xml
+++ b/AOS-ADMIN/01.PROJECT/webapp/WEB-INF/web.xml
@@ -2,8 +2,8 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 
-	<display-name>AOS</display-name>
-	<description>AOS应用基础平台</description>
+	<display-name>AOSuite</display-name>
+	<description>AOSuite开发套件</description>
 
 	<!-- 应用上下文配置文件 -->
 	<context-param>
