no commit message

--- a/AOS-ADMIN/01.PROJECT/src/resources/aos.properties
+++ b/AOS-ADMIN/01.PROJECT/src/resources/aos.properties
@@ -1,6 +1,7 @@
 #============ Redis Configuration Begin ==========#
 redis_host=127.0.0.1
 redis_port=6379
+redis_pwd=
 redis_maxTotal=200
 redis_maxIdle=50
 redis_minIdle=10
