--- a/01.SRC-BACKEND/src/resources/aos.properties
+++ b/01.SRC-BACKEND/src/resources/aos.properties
@@ -12,7 +12,7 @@ redis_maxWaitMillis=10000
 
 #==MySQL Connection
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/aosuite?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
+jdbc.url=jdbc:mysql://127.0.0.1:3306/aosuite?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=root
 jdbc.vsql=SELECT 1
