--- a/AOSuite G2/showcase/b.springboot-mybatis/pom.xml
+++ b/AOSuite G2/showcase/b.springboot-mybatis/pom.xml
@@ -36,25 +36,38 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-        
-        <!-- 常用类库：Apache工具类 -->
+
+		<!-- 常用类库：Apache工具类 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-		
-        <!-- 常用类库：Google对JDK的增强和扩展类库 -->
+
+		<!-- 常用类库：Google对JDK的增强和扩展类库 -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>22.0</version>
 		</dependency>
-        
-        <!-- 常用类库：阿里巴巴的JSON解析类库 -->
+
+		<!-- 常用类库：阿里巴巴的JSON解析类库 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.33</version>
+		</dependency>
+
+        <!-- mybatis依赖 -->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		
+        <!-- mysql JDBC 驱动 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
 		<!-- 开发阶段的热部署支持 -->
