no commit message

--- a/AOSuite G2/showcase/b.springboot-mybatis/src/main/resources/application.properties
+++ b/AOSuite G2/showcase/b.springboot-mybatis/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 mybatis.type-aliases-package=com.aosuite
+mybatis.mapperLocations=classpath*:**/*Mapper.xml
 mybatis.config-location=classpath:mybatis-config.xml
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
