no commit message

--- a/myclouds-builder/src/main/resources/application.properties
+++ b/myclouds-builder/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.password = root
 
 #MyClouds Builder Configuration
 my.builder.author=myclouds team
-my.builder.domain.outFilePath=G:/01.MyClouds/svn/myclouds-domain-entity/src/main/java/com/gitee/myclouds/admin/domain
+my.builder.domain.outFilePath=G:/01.MyClouds/svn/myclouds-domain-mapper/src/main/java/com/gitee/myclouds/admin/domain
 my.builder.domain.packagePath=com.gitee.myclouds.admin.domain
-my.builder.domain.tables=my_enum,my_param
+my.builder.domain.tables=my_enum
 #entity,mapper entity(*Entity.java) | mapper(*Mapper.java *Mapper.xml)
 #my.builder.domain.target=entity,mapper
-my.builder.domain.target=entity
+my.builder.domain.target=mapper
