no commit message

--- a/myclouds-admin/src/main/resources/application.properties
+++ b/myclouds-admin/src/main/resources/application.properties
@@ -31,22 +31,36 @@ spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/myclouds?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
 spring.datasource.username = root
 spring.datasource.password = root
+#https://tomcat.apache.org/tomcat-8.0-doc/jdbc-pool.html#Common_Attributes
+spring.datasource.tomcat.validationQuery=SELECT 1
+spring.datasource.tomcat.testWhileIdle=true
+spring.datasource.tomcat.testOnBorrow=true
+spring.datasource.tomcat.testOnReturn=true
+spring.datasource.tomcat.removeAbandoned=true
+spring.datasource.tomcat.logAbandoned=true
+
+
 
 #============ Consul Configuration Begin ==========#
 spring.cloud.consul.enabled=true
 #spring.cloud.consul.host=192.168.7.16
 spring.cloud.consul.host=127.0.0.1
 spring.cloud.consul.port=8500
+#To disable the service registration you can set false
 spring.cloud.consul.discovery.register=true
+#To disable the Consul Discovery Client you can set false
 spring.cloud.consul.discovery.enabled=true
 spring.cloud.consul.discovery.serviceName=myadmin-service
-#spring.cloud.consul.discovery.hostname=192.168.22.47
+#spring.cloud.consul.discovery.hostname (The App Deployed Host)
 spring.cloud.consul.discovery.hostname=127.0.0.1
 spring.cloud.consul.discovery.port=${server.port}
-spring.cloud.consul.discovery.healthCheckUrl=http://127.0.0.1:${server.port}${server.context-path}/health
+spring.cloud.consul.discovery.healthCheckUrl=http://127.0.0.1:${server.port}${server.context-path}health
 spring.cloud.consul.discovery.healthCheckInterval=10s
 #spring.cloud.consul.discovery.tags=dev
 #============ Consul Configuration END ==========#
+
+#set null object not output when jackson serialize
+spring.jackson.default-property-inclusion=non_null
 
 management.security.enabled=false
 management.health.consul.enabled=false
