no commit message

--- a/myclouds-admin-web/src/main/resources/application.properties
+++ b/myclouds-admin-web/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=myclouds-admin-web
 server.port=8080
-#server.context-path=/myadmin
 
 #========= HttpSession Based Redis ==========#
 spring.session.store-type=redis
@@ -40,6 +39,9 @@ spring.cloud.consul.enabled=true
 spring.cloud.consul.host=127.0.0.1
 spring.cloud.consul.port=8500
 #============ Consul Configuration END ==========#
+
+#set null object not output when jackson serialize
+spring.jackson.default-property-inclusion=non_null
 
 management.security.enabled=false
 management.health.consul.enabled=false
