no commit message

--- a/myclouds-admin/src/main/resources/application.properties
+++ b/myclouds-admin/src/main/resources/application.properties
@@ -38,6 +38,7 @@ spring.datasource.tomcat.testOnBorrow=true
 spring.datasource.tomcat.testOnReturn=true
 spring.datasource.tomcat.removeAbandoned=true
 spring.datasource.tomcat.logAbandoned=true
+spring.datasource.tomcat.removeAbandonedTimeout=600
 spring.datasource.tomcat.defaultReadOnly=false
 
 
