no commit message

--- a/myclouds-admin-web/src/main/resources/application.properties
+++ b/myclouds-admin-web/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=myclouds-admin-web
 server.port=80
 
+#==========compression===========#
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/javascript,application/xml,application/font-woff2,application/font-woff,text/css,text/html,text/xml,text/plain
+server.compression.min-response-size=2048
+
 #========= HttpSession Based Redis ==========#
 spring.session.store-type=redis
 #TimeUnit-Second
