--- a/myclouds-builder/src/main/resources/application.properties
+++ b/myclouds-builder/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.password = root
 
 #MyClouds Builder Configuration
 my.builder.author=myclouds team
-my.builder.domain.outFilePath=F:/\u9879\u76EE/\u5353\u6295\u7406\u8D22/03.\u5F00\u53D1/myclouds-domain-entity/src/main/java/com/gitee/myclouds/admin/domain
+my.builder.domain.outFilePath=G:/01.MyClouds/svn/myclouds-domain-mapper/src/main/java/com/gitee/myclouds/admin/domain
 my.builder.domain.packagePath=com.gitee.myclouds.admin.domain
-my.builder.domain.tables=my_role_module
+my.builder.domain.tables=my_module
 #entity,mapper entity(*Entity.java) | mapper(*Mapper.java *Mapper.xml)
 #my.builder.domain.target=entity,mapper
-my.builder.domain.target=entity
+my.builder.domain.target=mapper
