--- a/myclouds-admin/src/main/resources/application.properties
+++ b/myclouds-admin/src/main/resources/application.properties
@@ -11,9 +11,9 @@ server.session.timeout=60
 spring.redis.host=127.0.0.1
 spring.redis.password= 
 spring.redis.port=6379
-spring.redis.pool.max-idle=8  
-spring.redis.pool.min-idle=0  
-spring.redis.pool.max-active=8  
+spring.redis.pool.max-idle=50
+spring.redis.pool.min-idle=10
+spring.redis.pool.max-active=200
 spring.redis.pool.max-wait=-1 
 
 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly.
@@ -27,21 +27,19 @@ mybatis.type-aliases-package=com.gitee.myclouds
 mybatis.mapperLocations=classpath*:**/*Mapper.xml
 mybatis.config-location=classpath:mybatis-config.xml
 
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/myclouds?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
-spring.datasource.username = root
-spring.datasource.password = root
-#https://tomcat.apache.org/tomcat-8.0-doc/jdbc-pool.html#Common_Attributes
-spring.datasource.tomcat.validationQuery=SELECT 1
-spring.datasource.tomcat.testWhileIdle=true
-spring.datasource.tomcat.testOnBorrow=true
-spring.datasource.tomcat.testOnReturn=true
-spring.datasource.tomcat.removeAbandoned=true
-spring.datasource.tomcat.logAbandoned=true
-spring.datasource.tomcat.removeAbandonedTimeout=600
-spring.datasource.tomcat.defaultReadOnly=false
-
-
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myclouds?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.druid.initial-size=10
+spring.datasource.druid.min-idle=10
+spring.datasource.druid.max-active=50
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.test-while-idle=true
 
 #============ Consul Configuration Begin ==========#
 spring.cloud.consul.enabled=true
