--- a/myclouds-admin/pom.xml
+++ b/myclouds-admin/pom.xml
@@ -5,11 +5,11 @@
 	<groupId>com.gitee.myclouds</groupId>
 	<artifactId>myclouds-admin</artifactId>
 	<version>1.0</version>
-    <packaging>jar</packaging>
-    
+	<packaging>jar</packaging>
+
 	<name>myclouds-admin</name>
 	<description>MyClouds管理系统后台服务</description>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -48,14 +48,14 @@
 			<artifactId>myclouds-toolbox</artifactId>
 			<version>1.0</version>
 		</dependency>
-		
+
 		<!-- myclouds-domain-mapper -->
 		<dependency>
 			<groupId>com.gitee.myclouds</groupId>
 			<artifactId>myclouds-domain-mapper</artifactId>
 			<version>1.0</version>
 		</dependency>
-		
+
 		<!-- myclouds-common -->
 		<dependency>
 			<groupId>com.gitee.myclouds</groupId>
@@ -91,10 +91,8 @@
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 
-<!-- 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-data-redis</artifactId> 
+			</dependency> -->
 
 		<!-- mybatis依赖 -->
 		<dependency>
@@ -109,22 +107,34 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
-		<!-- 开发阶段的热部署支持 <dependency> <groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-devtools</artifactId> <optional>true</optional> </dependency> -->
+		<!-- druid 连接池 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.9</version>
+		</dependency>
 
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-                <groupId>org.springframework.boot</groupId>  
-                <artifactId>spring-boot-maven-plugin</artifactId> 
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 	<repositories>
