--- a/myclouds-builder/src/main/resources/application.properties
+++ b/myclouds-builder/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=myclouds-builder
 
 ##MySQL
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/myclouds?useUnicode=true&characterEncoding=utf-8&remarks=true&useInformationSchema=true
 spring.datasource.username = root
 spring.datasource.password = root
