--- a/myclouds-builder/pom.xml
+++ b/myclouds-builder/pom.xml
@@ -53,6 +53,13 @@
 			<version>1.3.0</version>
 		</dependency>
 		
+		<!-- druid 连接池 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.9</version>
+		</dependency>
+		
 		<!-- 提供Servlet相关编译依赖支持 -->
 		<dependency>
 		    <groupId>org.apache.tomcat.embed</groupId>
