--- a/myclouds-domain-mapper/pom.xml
+++ b/myclouds-domain-mapper/pom.xml
@@ -23,14 +23,14 @@
 			<artifactId>myclouds-toolbox</artifactId>
 			<version>1.0</version>
 		</dependency>
-		
+
 		<!-- myclouds-domain-entity -->
 		<dependency>
 			<groupId>com.gitee.myclouds</groupId>
 			<artifactId>myclouds-domain-entity</artifactId>
 			<version>1.0</version>
 		</dependency>
-		
+
 		<!-- mybatis依赖 -->
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
@@ -51,6 +51,14 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 	<repositories>
