--- a/myclouds-domain-mapper/pom.xml
+++ b/myclouds-domain-mapper/pom.xml
@@ -51,11 +51,12 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<resources>
+ 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
 					<include>**/*.xml</include>
+					<include>**/*.java</include>
 				</includes>
 			</resource>
 		</resources>
