--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,11 @@
 		<module>myclouds-toolbox</module>
 		<module>myclouds-builder</module>
     </modules>
+	<plugins>
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+		<version>3.0.0</version>
+	  </plugin>
+    </plugins>
 </project>
