优化了代码生成器的诸多缺陷

--- a/myclouds-admin-server/pom.xml
+++ b/myclouds-admin-server/pom.xml
@@ -140,12 +140,9 @@
 
 	<repositories>
 		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
+			<id>aliyun</id>
+			<name>aliyun repo</name>
+			<url>https://maven.aliyun.com/nexus/content/groups/public/</url>
 		</repository>
 	</repositories>
 
