--- a/myclouds-gateway-server/pom.xml
+++ b/myclouds-gateway-server/pom.xml
@@ -95,14 +95,10 @@
 
 	<repositories>
 		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
+			<id>aliyun</id>
+			<name>aliyun repo</name>
+			<url>https://maven.aliyun.com/nexus/content/groups/public/</url>
 		</repository>
 	</repositories>
-
 
 </project>
