--- a/myclouds-toolbox/pom.xml
+++ b/myclouds-toolbox/pom.xml
@@ -110,13 +110,10 @@
 	</build>
 	
 	<repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
+        <repository>
+			<id>aliyun</id>
+			<name>aliyun repo</name>
+			<url>https://maven.aliyun.com/nexus/content/groups/public</url>
 		</repository>
 		<repository>
 			<id>nuxeo</id>
