--- a/myclouds-admin-server/src/main/resources/application.properties
+++ b/myclouds-admin-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=myclouds-admin
+spring.application.name=myclouds-admin-server
 server.port=8200
 server.context-path=/
 
@@ -45,7 +45,7 @@ spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.register=true
 #To disable the Consul Discovery Client you can set false
 spring.cloud.consul.discovery.enabled=true
-spring.cloud.consul.discovery.serviceName=myadmin-service
+spring.cloud.consul.discovery.serviceName=myclouds-admin-server
 #spring.cloud.consul.discovery.hostname (The App Deployed Host)
 spring.cloud.consul.discovery.hostname=127.0.0.1
 spring.cloud.consul.discovery.port=${server.port}
