--- a/myclouds-admin-webserver/src/main/resources/application.properties
+++ b/myclouds-admin-webserver/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=myclouds-admin-web
+spring.application.name=myclouds-admin-webserver
 server.port=80
 
 #==========compression===========#
