引入了lombok，升级了hutool到4.1.8。合并了myclouds-domain-entity和myclouds-domain-mapper为myclouds-domain工程。

--- a/myclouds-admin-server/pom.xml
+++ b/myclouds-admin-server/pom.xml
@@ -52,7 +52,7 @@
 		<!-- myclouds-domain-mapper -->
 		<dependency>
 			<groupId>com.gitee.myclouds</groupId>
-			<artifactId>myclouds-domain-mapper</artifactId>
+			<artifactId>myclouds-domain</artifactId>
 			<version>1.0</version>
 		</dependency>
 
