--- a/myclouds-domain/pom.xml
+++ b/myclouds-domain/pom.xml
@@ -1,13 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.gitee.myclouds</groupId>
 	<artifactId>myclouds-domain</artifactId>
-	<version>1.0</version>
-
 	<name>myclouds-domain</name>
-	<description>MyClouds数据访问接口</description>
+
+	<parent>
+		<groupId>com.gitee.myclouds</groupId>
+		<artifactId>myclouds</artifactId>
+		<version>1.0</version>
+	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,21 +17,12 @@
 	</properties>
 
 	<dependencies>
-
-		<!-- MyClouds工具类库 -->
-		<dependency>
-			<groupId>com.gitee.myclouds</groupId>
-			<artifactId>myclouds-toolbox</artifactId>
-			<version>1.0</version>
-		</dependency>
-
-		<!-- mybatis依赖 -->
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.0</version>
+			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -43,7 +35,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
- 		<resources>
+		<resources>
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
@@ -53,13 +45,5 @@
 			</resource>
 		</resources>
 	</build>
-
-	<repositories>
-		<repository>
-			<id>aliyun</id>
-			<name>aliyun repo</name>
-			<url>https://maven.aliyun.com/nexus/content/groups/public/</url>
-		</repository>
-	</repositories>
 
 </project>
