--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,131 @@
 	<artifactId>myclouds</artifactId>
 	<version>1.0</version>
 	<packaging>pom</packaging>
-
 	<name>myclouds</name>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.8.RELEASE</version>
+		<relativePath />
+	</parent>
+
 	<modules>
-		<module>myclouds-admin-server</module>
-		<module>myclouds-admin-webserver</module>
 		<module>myclouds-common</module>
 		<module>myclouds-domain</module>
+		<module>myclouds-admin-server</module>
+		<module>myclouds-admin-webserver</module>
 		<module>myclouds-gateway-server</module>
-		<module>myclouds-toolbox</module>
 		<module>myclouds-builder-standalone</module>
 	</modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Dalston.SR4</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.gitee.myclouds</groupId>
+			<artifactId>myclouds-common</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.33</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.6</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.josql</groupId>
+			<artifactId>josql</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.josql</groupId>
+			<artifactId>gentlyweb-utils</artifactId>
+			<version>1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>4.1.8</version>
+		</dependency>
+	</dependencies>
+
+	<repositories>
+        <repository>
+			<id>aliyun</id>
+			<name>aliyun repo</name>
+			<url>https://maven.aliyun.com/nexus/content/groups/public</url>
+		</repository>
+		<repository>
+			<id>nuxeo</id>
+			<name>nuxeo releases</name>
+			<url>https://maven-eu.nuxeo.org/nexus/content/repositories/public-releases</url>
+		</repository>
+		<repository>
+			<id>redhat</id>
+			<name>redhat ga</name>
+			<url>https://maven.repository.redhat.com/ga</url>
+		</repository>
+	</repositories>
 
 </project>
