--- a/myclouds-admin-webserver/pom.xml
+++ b/myclouds-admin-webserver/pom.xml
@@ -18,6 +18,11 @@
 	
 	<dependencies>
 		<dependency>
+			<groupId>com.gitee.myclouds</groupId>
+			<artifactId>myclouds-common</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
