--- a/myclouds-domain/pom.xml
+++ b/myclouds-domain/pom.xml
@@ -18,6 +18,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.gitee.myclouds</groupId>
+			<artifactId>myclouds-common</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.0</version>
