--- a/myclouds-admin-webserver/src/main/resources/application.properties
+++ b/myclouds-admin-webserver/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.compression.enabled=true
 server.compression.mime-types=application/json,application/javascript,application/xml,application/font-woff2,application/font-woff,text/css,text/html,text/xml,text/plain
 server.compression.min-response-size=2048
 
-#========= HttpSession Based Redis ==========#
+#========= HttpSession  ==========#
 spring.session.store-type=redis
 #TimeUnit-Second
 server.session.timeout=3600
