调整会话超时时间

--- a/myclouds-admin-webserver/src/main/resources/application.properties
+++ b/myclouds-admin-webserver/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.compression.min-response-size=2048
 
 #========= HttpSession  ==========#
 spring.session.store-type=redis
-#TimeUnit-Second
+#TimeUnit-Second(7200s=2h)
 server.session.timeout=7200
 
 #============ Redis Configuration ==========#
