--- a/myclouds-admin-webserver/pom.xml
+++ b/myclouds-admin-webserver/pom.xml
@@ -42,6 +42,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-feign</artifactId>
+			<version>1.4.6.RELEASE</version>
 		</dependency>
 	</dependencies>
 
