--- a/myclouds-admin-server/src/main/resources/application.properties
+++ b/myclouds-admin-server/src/main/resources/application.properties
@@ -38,19 +38,16 @@ spring.datasource.druid.test-while-idle=true
 
 #============ Consul Configuration Begin ==========#
 spring.cloud.consul.enabled=true
-#spring.cloud.consul.host=192.168.7.16
 spring.cloud.consul.host=127.0.0.1
 spring.cloud.consul.port=8500
 #To disable the service registration you can set false
 spring.cloud.consul.discovery.register=true
 #To disable the Consul Discovery Client you can set false
 spring.cloud.consul.discovery.enabled=true
-spring.cloud.consul.discovery.serviceName=myclouds-admin-server
-#spring.cloud.consul.discovery.hostname (The App Deployed Host)
-spring.cloud.consul.discovery.hostname=127.0.0.1
-spring.cloud.consul.discovery.port=${server.port}
-spring.cloud.consul.discovery.healthCheckUrl=http://127.0.0.1:${server.port}${server.context-path}health
-spring.cloud.consul.discovery.healthCheckInterval=10s
+spring.cloud.consul.discovery.instance-id=myclouds-admin-server
+spring.cloud.consul.discovery.prefer-ip-address=true
+spring.cloud.consul.discovery.health-check-path=${management.context-path}/health
+spring.cloud.consul.discovery.health-check-interval=10s
 #spring.cloud.consul.discovery.tags=dev
 #============ Consul Configuration END ==========#
 
@@ -58,7 +55,9 @@ spring.cloud.consul.discovery.healthCheckInterval=10s
 spring.jackson.default-property-inclusion=NON_NULL
 
 management.security.enabled=false
+#if set true then consul health will not be ok
 management.health.consul.enabled=false
+management.context-path=/act
 endpoints.health.enabled=true
 endpoints.health.sensitive=false
 endpoints.metrics.enabled=true
