--- a/myclouds-admin-webserver/src/main/resources/application.properties
+++ b/myclouds-admin-webserver/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=myclouds-admin-webserver
 server.port=80
+server.context-path=/
 
 #==========compression===========#
 server.compression.enabled=true
@@ -29,7 +30,7 @@ spring.http.encoding.force=true
 
 #========thymeleaf==========#
 # Enable template caching.
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 # Template encoding
 spring.thymeleaf.encoding=UTF-8
 # Template mode to be applied to templates. See also StandardTemplateModeHandlers. LEGACYHTML5
@@ -43,13 +44,23 @@ spring.thymeleaf.suffix=.html
 spring.cloud.consul.enabled=true
 spring.cloud.consul.host=127.0.0.1
 spring.cloud.consul.port=8500
+#To disable the service registration you can set false
+spring.cloud.consul.discovery.register=true
+#To disable the Consul Discovery Client you can set false
+spring.cloud.consul.discovery.enabled=true
+spring.cloud.consul.discovery.instance-id=myclouds-admin-webserver
+spring.cloud.consul.discovery.prefer-ip-address=true
+spring.cloud.consul.discovery.health-check-path=${management.context-path}/health
+spring.cloud.consul.discovery.health-check-interval=10s
 #============ Consul Configuration END ==========#
 
 #set null object not output when jackson serialize
 spring.jackson.default-property-inclusion=NON_NULL
 
 management.security.enabled=false
+#if set true then consul health will not be ok
 management.health.consul.enabled=false
+management.context-path=/act
 endpoints.health.enabled=true
 endpoints.health.sensitive=false
 endpoints.metrics.enabled=true
